<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddAppointmentFragment"
    android:background="@drawable/application_background">


    <TextView
        android:id="@+id/tv_add_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="28dp"
        android:text="@string/add_appointment"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="@dimen/default_margin_huge"/>

    <TextView
        android:id="@+id/tv_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/doctor"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/default_text_size_big"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_below="@id/tv_add_appointment"/>
    <Spinner
        android:id="@+id/spinner_doctors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@id/tv_doctor"
        android:layout_marginTop="@dimen/default_margin_big"/>

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_below="@id/spinner_doctors"
    android:layout_marginBottom="28dp"
    android:text="@string/date"
    android:textColor="@color/colorBlack"
    android:textSize="@dimen/default_text_size_big"
    android:layout_marginTop="@dimen/default_margin_big"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/select_date"
        android:layout_below="@id/textView"/>

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/button"
        android:layout_marginBottom="28dp"
        android:text="@string/hour"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/default_text_size_big"
        android:layout_marginTop="@dimen/default_margin_big"/>
    <Button
        android:id="@+id/btn_hour_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/select_hour"
        android:layout_below="@id/tv_hour"/>


    <Button
        android:id="@+id/btn_make_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_margin_big"
        android:text="@string/confirm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/selector_button"/>



</RelativeLayout>