<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PrescriptionFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prescriptions"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/welcomeMessageColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/default_margin_big"/>

    <Button
        android:id="@+id/btn_add_prescriptions"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/add_appointment"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/add_new_prescriptions"
        app:layout_constraintBottom_toBottomOf="@id/btn_manage_prescriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_manage_prescriptions"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/ic_showappointments"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/manage_prescriptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_reminders_prescriptions"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/ic_manage_appointments"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/reminders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_manage_prescriptions" />

</androidx.constraintlayout.widget.ConstraintLayout>
