<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/application_background"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="168dp"
        android:layout_height="61dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:drawableStart="@drawable/ic_logout_toconvert"
        android:onClick="logout"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#000F60"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/ic_createusericon"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/btn_appointments_menu"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/ic_manage_appointments"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/appointments_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/btn_prescriptions_menu"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/recipies"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/my_prescriptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

<!--    <Button-->
<!--        android:id="@+id/btn_news"-->
<!--        android:layout_width="291dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:background="@drawable/selector_button"-->
<!--        android:drawableStart="@drawable/recipies"-->
<!--        android:paddingStart="@dimen/default_padding"-->
<!--        android:paddingEnd="@dimen/default_padding"-->
<!--        android:text="@string/news"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.680" />-->

<!--    <Button-->
<!--        android:id="@+id/medicineSuppliesButton"-->
<!--        android:layout_width="291dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:background="@drawable/selector_button"-->
<!--        android:drawableStart="@drawable/ic_medicine_supplies"-->
<!--        android:paddingStart="@dimen/default_padding"-->
<!--        android:paddingEnd="@dimen/default_padding"-->
<!--        android:text="@string/medicine_supplies"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.80" />-->

    <Button
        android:id="@+id/manageAccounts"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:background="@drawable/selector_button"
        android:drawableStart="@drawable/ic_manage_accounts"
        android:paddingStart="@dimen/default_padding_small"
        android:paddingEnd="@dimen/default_padding"
        android:text="@string/manage_accounts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />


    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/welcomeMessageColor"
        android:textSize="@dimen/default_text_size_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        android:layout_marginLeft="@dimen/default_margin_big"/>


</androidx.constraintlayout.widget.ConstraintLayout>